--- a/Es.Riam.OpenArchivos/Es.Riam.OpenArchivos.csproj
+++ b/Es.Riam.OpenArchivos/Es.Riam.OpenArchivos.csproj
@@ -1,15 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Es.Riam.Gnoss.Util\Es.Riam.Gnoss.Util.csproj" />
     <ProjectReference Include="..\Es.Riam.InterfacesOpenArchivos\Es.Riam.InterfacesOpenArchivos.csproj" />
   </ItemGroup>
 
