--- a/Es.Riam.Gnoss.FileManager/Es.Riam.Gnoss.FileManager.csproj
+++ b/Es.Riam.Gnoss.FileManager/Es.Riam.Gnoss.FileManager.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Common" Version="12.15.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
