--- a/Es.Riam.Gnoss.UtilServiciosWeb/Es.Riam.Gnoss.UtilServiciosWeb.csproj
+++ b/Es.Riam.Gnoss.UtilServiciosWeb/Es.Riam.Gnoss.UtilServiciosWeb.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\Es.Riam.Gnoss.CL\Es.Riam.Gnoss.CL.csproj" />
     <ProjectReference Include="..\Es.Riam.Gnoss.Elementos\Es.Riam.Gnoss.Elementos.csproj" />
     <ProjectReference Include="..\Es.Riam.Gnoss.Logica\Es.Riam.Gnoss.Logica.csproj" />
+	  <ProjectReference Include="..\Es.Riam.Util\Es.Riam.Util.csproj" />
   </ItemGroup>
 
 </Project>
