--- a/Es.Riam.Gnoss.Traducciones/Es.Riam.Gnoss.Traducciones.csproj
+++ b/Es.Riam.Gnoss.Traducciones/Es.Riam.Gnoss.Traducciones.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="ExcelDataReader" Version="3.7.0" />
 		<PackageReference Include="ExcelDataReader.DataSet" Version="3.7.0" />
 		<PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
+		<PackageReference Include="System.IO.Packaging" Version="8.0.1" />
 	</ItemGroup>
 
   <ItemGroup>
