--- a/Es.Riam.Gnoss.RabbitMQ/Es.Riam.Gnoss.RabbitMQ.csproj
+++ b/Es.Riam.Gnoss.RabbitMQ/Es.Riam.Gnoss.RabbitMQ.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
 		<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.1.2" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+		<PackageReference Include="System.Text.Json" Version="8.0.5" />
 	</ItemGroup>
 
   <ItemGroup>
