--- a/Es.Riam.Gnoss.Web.UtilOAuth/Es.Riam.Gnoss.Web.UtilOAuth.csproj
+++ b/Es.Riam.Gnoss.Web.UtilOAuth/Es.Riam.Gnoss.Web.UtilOAuth.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="DotNetOpenAuth.OAuth.Core" Version="4.3.4.13329" />
 		<PackageReference Include="DotNetOpenAuth.OAuth.ServiceProvider" Version="4.3.4.13329" />
 		<PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
+		<PackageReference Include="System.IO.Packaging" Version="8.0.1" />
 		<PackageReference Include="System.ServiceModel.Http" Version="8.0.0" />
 		<PackageReference Include="System.ServiceModel.Security" Version="6.0.0" />
 	</ItemGroup>
