--- a/Es.Riam.Util/Es.Riam.Util.csproj
+++ b/Es.Riam.Util/Es.Riam.Util.csproj
@@ -12,7 +12,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Aspose.Zip" Version="24.10.0" />
-		<PackageReference Include="HtmlSanitizer" Version="8.1.870" />
+		<PackageReference Include="HtmlSanitizer" Version="9.0.892" />
 		<PackageReference Include="MessagePack" Version="2.5.187" />
 		<PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
 		<PackageReference Include="Microsoft.Exchange.WebServices.NETStandard" Version="1.1.3" />
@@ -28,6 +28,7 @@
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
 		<PackageReference Include="System.Data.OracleClient" Version="1.0.8" />
 		<PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.2" />
+		<PackageReference Include="System.Text.Encodings.Web" Version="6.0.0" />
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
 	</ItemGroup>
 
